--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
     Copyright 2014 Fit.Training
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An Example Website2</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
