Adding copyright notice

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
     Copyright 2014 Fit.Training
+    Copyright 2015 Fit.Training
 -->
 <head>
 	<title>An Example Website2</title>
